objects/LoyaltySettings__mdt.object
<CustomObject>
    <fields>
        <fullName>BrandId__c</fullName>
        <label>BrandId</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EnableRewardsButton__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is used to show/hide rewards adjustment button on Case</description>
        <label>EnableRewardsButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableTriggeredSend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Triggered Send</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLoyaltyApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this brand is part of Loyalty program or not.</description>
        <label>IsLoyaltyApplicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogSignupActivity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Log Signup Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoyaltyPrefix__c</fullName>
        <label>LoyaltyPrefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Brand__c</fullName>
        <label>Parent Brand</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZetaGUID__c</fullName>
        <label>ZetaGUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>chargeItKeyword__c</fullName>
        <label>chargeItKeyword</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>preferenceCenterKeyword__c</fullName>
        <label>preferenceCenterKeyword</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shortCode__c</fullName>
        <label>shortCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stopKeyword__c</fullName>
        <label>stopKeyword</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <label>LoyaltySettings</label>
    <listViews>
        <fullName>Full_view</fullName>
        <columns>BrandId__c</columns>
        <columns>MasterLabel</columns>
        <columns>IsLoyaltyApplicable__c</columns>
        <columns>DeveloperName</columns>
        <columns>Parent_Brand__c</columns>
        <columns>LoyaltyPrefix__c</columns>
        <columns>EnableRewardsButton__c</columns>
        <columns>EnableTriggeredSend__c</columns>
        <columns>LogSignupActivity__c</columns>
        <columns>ZetaGUID__c</columns>
        <columns>shortCode__c</columns>
        <columns>chargeItKeyword__c</columns>
        <columns>preferenceCenterKeyword__c</columns>
        <columns>stopKeyword__c</columns>
        <filterScope>Everything</filterScope>
        <label>Full view</label>
    </listViews>
    <listViews>
        <fullName>Records</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>BrandId__c</columns>
        <columns>IsLoyaltyApplicable__c</columns>
        <columns>Parent_Brand__c</columns>
        <columns>ZetaGUID__c</columns>
        <columns>LoyaltyPrefix__c</columns>
        <columns>EnableRewardsButton__c</columns>
        <filterScope>Everything</filterScope>
        <label>Records</label>
    </listViews>
    <pluralLabel>LoyaltySettings</pluralLabel>
</CustomObject>